Bug 15391 - Xv image with height of 2048 pixels displayed incorrectly
Summary: Xv image with height of 2048 pixels displayed incorrectly
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-07 11:10 UTC by Sjoerd Simons
Modified: 2010-10-19 16:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Sjoerd Simons 2008-04-07 11:10:39 UTC
Hi,

  When one tries to display a frame using XV of 2048 pixels (the maximum height on this card according to xvinfo). It gets squashed in the vertical direction. When displaying the same frame but then with a height of 2047 pixels everything works fine.  This only happens with the traditional overlay, the textured overlay seems to handle a height of 2048 pixels just fine.

The video card in this machine is a:
01:00.1 Display controller: ATI Technologies Inc RV380 [Radeon X600]
Comment 1 Alex Deucher 2010-10-19 16:23:07 UTC
fixed in 0f575984594e6977b4a7cb794dad8c6e56c850f1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.