Xv: limit overlay to 2047x2047

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=15391